롬복 종속성 추가

--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,12 @@
   <groupId>space.bum.junit</groupId>
   <artifactId>ch13-conti-jb</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
 </project>
